--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <!-- external fonts, icons, animations -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/global.css">
@@ -50,7 +55,7 @@
                 <a href="#services-section">Services</a>
             </div>
 
-            <button class="nav-cta-btn"><span>Book a Call</span> <i class="bi bi-arrow-right"></i> </button>
+            <button class="nav-cta-btn" id="cta"><span>Book a Call</span> <i class="bi bi-arrow-right"></i> </button>
             <a href=""> <i class="bi bi-list"></i> </a>
         </nav>
         <div class="modal">
@@ -58,7 +63,7 @@
             <div class="modal-content">
                 <div class="modal-item"><a href="#about-section">About</a></div>
                 <div class="modal-item"><a href="#services-section">Services</a></div>
-                <button class="nav-cta-btn modal-item"><span>Book a Call</span> <i class="bi bi-arrow-right"></i> </button>
+                <button class="nav-cta-btn modal-item" id="cta"><span>Book a Call</span> <i class="bi bi-arrow-right"></i> </button>
             </div>
         </div>
     </section>
@@ -70,13 +75,13 @@
         </div>
 
         <div class="hero">
-            <h1 class="hero-h1">Flow Theory AI Agency</h1>
+            <h1 class="hero-h1" id="text">Welcome</h1>
             <h2 class="hero-h2">
                 <span>Integrating AI into businesses</span><br>
                 <span>to streamline critical</span><br>
                 <span> processes</span>
             </h2>
-            <button class="nav-cta-btn"><span>Get Started</span>  </button>
+            <button class="nav-cta-btn" id="cta"> <span>Get Started</span>  </button>
         </div>
     </section>
 
@@ -149,11 +154,19 @@
         <!-- Cal inline embed code ends -->
     </section>
 
+    <footer id="footer">
+        <div class="footer-div">
+            <h1 class="footer__h1">&copy; 2025 Flow Theory AI All Right Reserved.</h1>
+        </div>
+    </footer>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
         </script>
     <script src="js/navbar.js"></script>
+    <script src="js/specialEffects.js"></script>
+
 </body>
 </html>
 
