--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
             <span>Processes</span>
           </h2>
           <div class="cta-div">
-            <button class="nav-cta-btn" id="cta">
+            <button class="nav-cta-btn journey-btn" id="cta">
               <span
-                >Start Your Ai Journey <i class="bi bi-arrow-right"></i>
+                >Start Your AI Journey <i class="bi bi-arrow-right"></i>
               </span>
             </button>
-            <button class="nav-cta-btn get-started-btn explore-btn" id="cta">
+            <button class="nav-cta-btn explore-btn" id="cta">
               <span>Explore Services</span>
             </button>
           </div>
@@ -391,79 +391,79 @@
             </div>
 
             <div class="checklist-item">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="lucide lucide-circle-check text-flow-lightBlue shrink-0 mt-0.5"
-                >
-                  <circle cx="12" cy="12" r="10"></circle>
-                  <path d="m9 12 2 2 4-4"></path>
-                </svg>
-                <p>Ethical AI implementation</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-circle-check text-flow-lightBlue shrink-0 mt-0.5"
+              >
+                <circle cx="12" cy="12" r="10"></circle>
+                <path d="m9 12 2 2 4-4"></path>
+              </svg>
+              <p>Ethical AI implementation</p>
             </div>
 
             <div class="checklist-item">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="lucide lucide-circle-check text-flow-lightBlue shrink-0 mt-0.5"
-                >
-                  <circle cx="12" cy="12" r="10"></circle>
-                  <path d="m9 12 2 2 4-4"></path>
-                </svg>
-                <p>Continuous innovation</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-circle-check text-flow-lightBlue shrink-0 mt-0.5"
+              >
+                <circle cx="12" cy="12" r="10"></circle>
+                <path d="m9 12 2 2 4-4"></path>
+              </svg>
+              <p>Continuous innovation</p>
             </div>
 
             <div class="checklist-item">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="lucide lucide-circle-check text-flow-lightBlue shrink-0 mt-0.5"
-                >
-                  <circle cx="12" cy="12" r="10"></circle>
-                  <path d="m9 12 2 2 4-4"></path>
-                </svg>
-                <p>Seamless integration with existing systems</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-circle-check text-flow-lightBlue shrink-0 mt-0.5"
+              >
+                <circle cx="12" cy="12" r="10"></circle>
+                <path d="m9 12 2 2 4-4"></path>
+              </svg>
+              <p>Seamless integration with existing systems</p>
             </div>
 
             <div class="checklist-item">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="lucide lucide-circle-check text-flow-lightBlue shrink-0 mt-0.5"
-                >
-                  <circle cx="12" cy="12" r="10"></circle>
-                  <path d="m9 12 2 2 4-4"></path>
-                </svg>
-                <p>Performance-driven solutions</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-circle-check text-flow-lightBlue shrink-0 mt-0.5"
+              >
+                <circle cx="12" cy="12" r="10"></circle>
+                <path d="m9 12 2 2 4-4"></path>
+              </svg>
+              <p>Performance-driven solutions</p>
             </div>
           </div>
         </div>
@@ -524,17 +524,17 @@
 
           <div class="about-card about-proof">
             <div class="proof-card">
-              <div class="proof-number">98%</div>
+              <div class="proof-number">100%</div>
               <div class="proof-text">Client Satisfaction</div>
             </div>
 
             <div class="proof-card">
-              <div class="proof-number">250+</div>
+              <div class="proof-number">5+</div>
               <div class="proof-text">Projects Completed</div>
             </div>
 
             <div class="proof-card">
-              <div class="proof-number">40+</div>
+              <div class="proof-number">3+</div>
               <div class="proof-text">AI Experts</div>
             </div>
           </div>
@@ -542,10 +542,103 @@
       </div>
     </section>
 
+    <!-- contact -->
+    <section id="contact-section">
+      <h1 class="contact-h1">Get in Touch</h1>
+      <h3 class="contact-h3">Start Your AI Journey Today</h3>
+      <p class="contact-p">
+        Ready to transform your business with AI automation? Contact us today to
+        schedule a consultation with our experts.
+      </p>
+
+      <div id="form-book-div">
+        <div id="info-form-div">
+          <div class="contact-information">
+            <h3 class="info-h3">Contact Information</h3>
+            <div class="email-us">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-mail text-flow-lightBlue"
+              >
+                <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+              </svg>
+              <div class="text">
+                <p>Email Us</p>
+                <p>info@flowtheoryai.com</p>
+              </div>
+            </div>
+            <h3 class="follow-h3">Follow Us</h3>
+            <a
+              href="https://x.com/flowtheoryai"
+              class="w-10 h-10 rounded-full bg-flow-blue/20 flex items-center justify-center hover:bg-flow-blue/40 transition-colors"
+            >
+              <svg
+                fill="currentColor"
+                class="twitter"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                version="1.1"
+                id="Layer_1"
+                width="24px"
+                height="24px"
+                viewBox="0 0 24 24"
+                style="enable-background: new 0 0 24 24"
+                xml:space="preserve"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+              >
+                <path
+                  d="M14.095479,10.316482L22.286354,1h-1.940718l-7.115352,8.087682L7.551414,1H1l8.589488,12.231093L1,23h1.940717  l7.509372-8.542861L16.448587,23H23L14.095479,10.316482z M11.436522,13.338465l-0.871624-1.218704l-6.924311-9.68815h2.981339  l5.58978,7.82155l0.867949,1.218704l7.26506,10.166271h-2.981339L11.436522,13.338465z"
+                />
+              </svg>
+            </a>
+          </div>
+          <div class="form-div">
+            <h3 class="send-h3">Send Us a Message</h3>
+            <form action="https://hook.us2.make.com/4q2jpc1iavy48s2vlj75dzepueajq7p3" method="POST">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                name="name"
+                placeholder="Enter Your Name"
+                required
+              />
+
+              <label for="email">Email</label>
+              <input
+                type="email"
+                name="email"
+                placeholder="Enter Your Email"
+                required
+              />
+
+              <label for="message">Message</label>
+              <textarea
+                rows="8"
+                name="message"
+                placeholder="Enter Your Message"
+                required
+              ></textarea>
+
+              <button type="submit" class="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+
+        <div id="book-div"></div>
+      </div>
+    </section>
+
     <script src="js/navbar.js"></script>
     <script src="js/hero.js"></script>
   </body>
 </html>
-
-
-
