--- a/index.html
+++ b/index.html
@@ -551,8 +551,13 @@
         schedule a consultation with our experts.
       </p>
 
+      <div class="contact-type">
+        <button class="quick-btn btn-active">Quick Question</button>
+        <button class="book-btn">Book A Call</button>
+      </div>
+
       <div id="form-book-div">
-        <div id="info-form-div">
+        <div  id="info-form-div">
           <div class="contact-information">
             <h3 class="info-h3">Contact Information</h3>
             <div class="email-us">
@@ -604,7 +609,10 @@
           </div>
           <div class="form-div">
             <h3 class="send-h3">Send Us a Message</h3>
-            <form action="https://hook.us2.make.com/4q2jpc1iavy48s2vlj75dzepueajq7p3" method="POST">
+            <form
+              action="https://hook.us2.make.com/4q2jpc1iavy48s2vlj75dzepueajq7p3"
+              method="POST"
+            >
               <label for="name">Name</label>
               <input
                 type="text"
@@ -634,11 +642,63 @@
           </div>
         </div>
 
-        <div id="book-div"></div>
+        <div id="book-div">
+          <div
+            style="width: 100%; height: 100%; overflow: scroll"
+            id="my-cal-inline"
+          ></div>
+          <script type="text/javascript">
+            (function (C, A, L) {
+              let p = function (a, ar) {
+                a.q.push(ar);
+              };
+              let d = C.document;
+              C.Cal =
+                C.Cal ||
+                function () {
+                  let cal = C.Cal;
+                  let ar = arguments;
+                  if (!cal.loaded) {
+                    cal.ns = {};
+                    cal.q = cal.q || [];
+                    d.head.appendChild(d.createElement("script")).src = A;
+                    cal.loaded = true;
+                  }
+                  if (ar[0] === L) {
+                    const api = function () {
+                      p(api, arguments);
+                    };
+                    const namespace = ar[1];
+                    api.q = api.q || [];
+                    if (typeof namespace === "string") {
+                      cal.ns[namespace] = cal.ns[namespace] || api;
+                      p(cal.ns[namespace], ar);
+                      p(cal, ["initNamespace", namespace]);
+                    } else p(cal, ar);
+                    return;
+                  }
+                  p(cal, ar);
+                };
+            })(window, "https://app.cal.com/embed/embed.js", "init");
+            Cal("init", "discovery-call", { origin: "https://cal.com" });
+
+            Cal.ns["discovery-call"]("inline", {
+              elementOrSelector: "#my-cal-inline",
+              config: { layout: "month_view" },
+              calLink: "hakim-cisse/discovery-call",
+            });
+
+            Cal.ns["discovery-call"]("ui", {
+              hideEventTypeDetails: false,
+              layout: "month_view",
+            });
+          </script>
+        </div>
       </div>
     </section>
 
     <script src="js/navbar.js"></script>
     <script src="js/hero.js"></script>
+    <script src="js/contact.js"></script>
   </body>
 </html>
