--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="#about-section" class="underline-animation about-a">About</a>
         </div>
 
-        <button class="nav-cta-btn" id="cta">Book a Call</button>
+        <button class="nav-cta-btn nav-book" id="cta">Book a Call</button>
         <a href=""> <i class="bi bi-list"></i> </a>
       </nav>
       <div class="modal">
@@ -584,8 +584,7 @@
             <h3 class="follow-h3">Follow Us</h3>
             <a
               href="https://x.com/flowtheoryai"
-              class="w-10 h-10 rounded-full bg-flow-blue/20 flex items-center justify-center hover:bg-flow-blue/40 transition-colors"
-            >
+              target="_blank">
               <svg
                 fill="currentColor"
                 class="twitter"
@@ -697,8 +696,13 @@
       </div>
     </section>
 
-    <script src="js/navbar.js"></script>
+    <footer id="footer">
+        <h1 class="footer__h1">&copy;2025 Flow Theory AI All Right Reserved.</h1>
+    </footer>
+
+
     <script src="js/hero.js"></script>
     <script src="js/contact.js"></script>
+    <script src="js/navbar.js"></script>
   </body>
 </html>
