added new favicon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="index, follow" />
 
     <title>FlowtheoryAI</title>
-    <link rel="icon" type="image/png" href="/assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="/assets/flowtheoryaifavicon.png" />
 
     <!-- external fonts, icons, animations -->
     <link
