--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="FlowtheoryAI" />
     <meta name="robots" content="index, follow" />
 
-    <title>FlowtheoryAI</title>
+    <title>Flow Theory AI</title>
     <link rel="icon" type="image/png" href="/assets/flowtheoryaifavicon.png" />
 
     <!-- external fonts, icons, animations -->
@@ -557,7 +557,7 @@
       </div>
 
       <div id="form-book-div">
-        <div  id="info-form-div">
+        <div id="info-form-div">
           <div class="contact-information">
             <h3 class="info-h3">Contact Information</h3>
             <div class="email-us">
@@ -582,9 +582,7 @@
               </div>
             </div>
             <h3 class="follow-h3">Follow Us</h3>
-            <a
-              href="https://x.com/flowtheoryai"
-              target="_blank">
+            <a href="https://x.com/flowtheoryai" target="_blank">
               <svg
                 fill="currentColor"
                 class="twitter"
@@ -697,9 +695,8 @@
     </section>
 
     <footer id="footer">
-        <h1 class="footer__h1">&copy;2025 Flow Theory AI All Right Reserved.</h1>
+      <h1 class="footer__h1">&copy;2025 Flow Theory AI All Right Reserved.</h1>
     </footer>
-
 
     <script src="js/hero.js"></script>
     <script src="js/contact.js"></script>
