finished form submission

--- a/index.html
+++ b/index.html
@@ -607,8 +607,8 @@
           <div class="form-div">
             <h3 class="send-h3">Send Us a Message</h3>
             <form
-              action="https://hook.us2.make.com/4q2jpc1iavy48s2vlj75dzepueajq7p3"
               method="POST"
+              id="contact-form"
             >
               <label for="name">Name</label>
               <input
