--- a/index.html
+++ b/index.html
@@ -540,6 +540,54 @@
           </div>
         </div>
       </div>
+
+      <!-- <div class="founders-div">
+        
+        <div class="founder-cards">
+          <div class="founder-card">
+            <img src="assets/hakim.jpg" alt="Hakim">
+            <h3>Hakim</h3>
+            <p>Co-Founder</p>
+          </div>
+          <div class="founder-card">
+            <img src="assets/yassine.jpg" alt="Yassine">
+            <h3>Yassine</h3>
+            <p>Co-Founder</p>
+          </div>
+        </div>
+      </div> -->
+
+      <section class="founders-section">
+        <h1 class="meet-h1">Meet the Founders</h1>
+
+        <div class="founder-card">
+          <div class="text">
+            <span class="tag">Hakim Cisse, Co-Founder & CMO</span>
+            <h2>I design intelligent automation solutions that simplify operations and boost business performance</h2>
+            <p>
+              From a young age, I’ve been obsessed with solving problems through technology. That passion led me to master systems optimization and automation across a variety of industries. Today, I help growing companies unlock new levels of efficiency and profitability by implementing smart automation strategies tailored to their unique workflows. My goal is simple: eliminate manual work, reduce friction, and let businesses scale faster with fewer headaches.
+            </p>
+          </div>
+          <div class="image">
+            <img src="assets/hakim.jpg" alt="Blake LaPerriere" />
+          </div>
+        </div>
+    
+        <div class="founder-card">
+          <div class="text">
+            <span class="tag">Yassine Diallo, Co-Founder & CTO</span>
+            <h2>I help businesses scale faster by turning repetitive tasks into powerful automation workflows</h2>
+            <p>
+              With a background rooted in systems thinking and backend development, I’ve always looked for smarter ways to get things done. At Flow Theory AI, I specialize in identifying high-impact automation opportunities that save time, cut costs, and unlock growth. I work hands-on with businesses to replace manual processes with streamlined, AI-powered systems — helping them operate more efficiently, make better decisions, and focus on what really matters.
+            </p>
+          </div>
+          <div class="image">
+            <img src="assets/yassine.jpg" alt="Jenn Lawlor" />
+          </div>
+        </div>
+      </section>
+
+
     </section>
 
     <!-- contact -->
