--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <link rel="icon" type="image/png" href="/assets/flowtheoryaifavicon.png" />
 
     <!-- external fonts, icons, animations -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    <linkrel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/styles.css" />
@@ -98,7 +95,7 @@
             </button>
           </div>
         </div>
-        <div class="bot-animation">
+        <!-- <div class="bot-animation">
           <div class="animation-svg">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -171,7 +168,7 @@
               Our proprietary technology automates complex workflows
             </p>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
