fix nav toggle, hero h2 font-size and cta btns

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" href="/assets/flowtheoryaifavicon.png" />
 
     <!-- external fonts, icons, animations -->
-    <linkrel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/styles.css" />
@@ -79,10 +79,11 @@
             <span> Custom Next Generation AI Solutions </span>
           </div>
           <h2 class="hero-h2">
-            <span class="hero-h2-span">Integrating AI Into Businesses</span
-            ><br />
-            <span>To Streamline Critical</span><br />
-            <span>Processes</span>
+            <span class="hero-h2-span">We Build Growth Engines. That Don’t Burn Out.</span>
+            <br/>
+            <span>Built for scale. Powered by AI.</span>
+            <br/>
+            <span>Tuned for your business.</span>
           </h2>
           <div class="cta-div">
             <button class="nav-cta-btn journey-btn" id="cta">
