added one liner hero h2

--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
             <span> Custom Next Generation AI Solutions </span>
           </div>
           <h2 class="hero-h2">
-            <span class="hero-h2-span">We Build Growth Engines. That Don’t Burn Out.</span>
+            <span class="hero-h2-span">We Build Growth Engines</span>
+            <br>
+            <span class="hero-h2-span">That Don’t Burn Out.</span>
             <br/>
-            <span>Built for scale. Powered by AI.</span>
+            <span>Built for scale Powered by AI.</span>
             <br/>
             <span>Tuned for your business.</span>
           </h2>
