new changes to hero section

--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
             <span class="hero-h2-span">We Build Growth Engines</span>
             <br>
             <span class="hero-h2-span">That Don’t Burn Out.</span>
+          </h2>
+          <h2 class="hero-h2-b-t">
+            <span class="h2-b">Built for scale. Powered by AI.</span>
             <br/>
-            <span>Built for scale Powered by AI.</span>
-            <br/>
-            <span>Tuned for your business.</span>
+            <span class="h2-t">Tuned for your business.</span>
           </h2>
           <div class="cta-div">
             <button class="nav-cta-btn journey-btn" id="cta">
@@ -732,7 +733,7 @@
     </section>
 
     <footer id="footer">
-      <h1 class="footer__h1">&copy;2025 Flow Theory AI All Right Reserved.</h1>
+      <h1 class="footer__h1">&copy;2025 Flow Theory AI All Rights Reserved.</h1>
     </footer>
 
     <script src="js/hero.js"></script>
