fixed contact section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <link rel="icon" type="image/png" href="/assets/flowtheoryaifavicon.png" />
 
     <!-- external fonts, icons, animations -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/styles.css" />
@@ -80,12 +83,12 @@
           </div>
           <h2 class="hero-h2">
             <span class="hero-h2-span">We Build Growth Engines</span>
-            <br>
+            <br />
             <span class="hero-h2-span">That Don’t Burn Out.</span>
           </h2>
           <h2 class="hero-h2-b-t">
             <span class="h2-b">Built for scale. Powered by AI.</span>
-            <br/>
+            <br />
             <span class="h2-t">Tuned for your business.</span>
           </h2>
           <div class="cta-div">
@@ -619,31 +622,79 @@
               </svg>
               <div class="text">
                 <p>Email Us</p>
-                <p>info@flowtheoryai.com</p>
+                <p>yassine@flowtheoryai.com</p>
               </div>
             </div>
             <h3 class="follow-h3">Follow Us</h3>
-            <a href="https://x.com/flowtheoryai" target="_blank">
-              <svg
-                fill="currentColor"
-                class="twitter"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                version="1.1"
-                id="Layer_1"
-                width="24px"
-                height="24px"
-                viewBox="0 0 24 24"
-                style="enable-background: new 0 0 24 24"
-                xml:space="preserve"
-                viewBox="0 0 24 24"
-                aria-hidden="true"
+            <div class="social-div">
+              <a
+                href="https://x.com/flowtheoryai"
+                target="_blank"
               >
-                <path
-                  d="M14.095479,10.316482L22.286354,1h-1.940718l-7.115352,8.087682L7.551414,1H1l8.589488,12.231093L1,23h1.940717  l7.509372-8.542861L16.448587,23H23L14.095479,10.316482z M11.436522,13.338465l-0.871624-1.218704l-6.924311-9.68815h2.981339  l5.58978,7.82155l0.867949,1.218704l7.26506,10.166271h-2.981339L11.436522,13.338465z"
-                />
-              </svg>
-            </a>
+                <svg
+                  fill="currentColor"
+                  class="twitter"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  version="1.1"
+                  id="Layer_1"
+                  width="24px"
+                  height="24px"
+                  viewBox="0 0 24 24"
+                  style="enable-background: new 0 0 24 24"
+                  xml:space="preserve"
+                  viewBox="0 0 24 24"
+                  aria-hidden="true"
+                >
+                  <path
+                    d="M14.095479,10.316482L22.286354,1h-1.940718l-7.115352,8.087682L7.551414,1H1l8.589488,12.231093L1,23h1.940717  l7.509372-8.542861L16.448587,23H23L14.095479,10.316482z M11.436522,13.338465l-0.871624-1.218704l-6.924311-9.68815h2.981339  l5.58978,7.82155l0.867949,1.218704l7.26506,10.166271h-2.981339L11.436522,13.338465z"
+                  />
+                </svg>
+              </a>
+              <a
+                href="https://www.linkedin.com/company/flow-theory-ai"
+                target="_blank"
+              >
+                <svg
+                  viewBox="0 -2 44 44"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  fill="#000000"
+                  class="linkedin"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <title>LinkedIn-color</title>
+                    <desc>Created with Sketch.</desc>
+                    <defs></defs>
+                    <g
+                      id="Icons"
+                      stroke="none"
+                      stroke-width="1"
+                      fill="none"
+                      fill-rule="evenodd"
+                    >
+                      <g
+                        id="Color-"
+                        transform="translate(-702.000000, -265.000000)"
+                        fill="#007EBB"
+                      >
+                        <path
+                          d="M746,305 L736.2754,305 L736.2754,290.9384 C736.2754,287.257796 734.754233,284.74515 731.409219,284.74515 C728.850659,284.74515 727.427799,286.440738 726.765522,288.074854 C726.517168,288.661395 726.555974,289.478453 726.555974,290.295511 L726.555974,305 L716.921919,305 C716.921919,305 717.046096,280.091247 716.921919,277.827047 L726.555974,277.827047 L726.555974,282.091631 C727.125118,280.226996 730.203669,277.565794 735.116416,277.565794 C741.21143,277.565794 746,281.474355 746,289.890824 L746,305 L746,305 Z M707.17921,274.428187 L707.117121,274.428187 C704.0127,274.428187 702,272.350964 702,269.717936 C702,267.033681 704.072201,265 707.238711,265 C710.402634,265 712.348071,267.028559 712.41016,269.710252 C712.41016,272.34328 710.402634,274.428187 707.17921,274.428187 L707.17921,274.428187 L707.17921,274.428187 Z M703.109831,277.827047 L711.685795,277.827047 L711.685795,305 L703.109831,305 L703.109831,277.827047 L703.109831,277.827047 Z"
+                          id="LinkedIn"
+                        ></path>
+                      </g>
+                    </g>
+                  </g>
+                </svg>
+              </a>
+            </div>
           </div>
           <div class="form-div">
             <h3 class="send-h3">Send Us a Message</h3>
