--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <nav class="nav">
         <a href="" class="logo">
           <img
-            src="https://lh3.googleusercontent.com/d/11tuEgfKlhZTW-tuBVCH7Irfq-CjBzegU"
+            src="assets/flow_logo.png"
             alt=""
             class="logo-img"
           />
